add a new banner

--- a/about.html
+++ b/about.html
@@ -213,6 +213,7 @@
            <!-- mission image -->
 
             <div id="bimg">
+              <img src="images/green.webp" alt="">
               <img src="images/mison-vision.webp" alt="">
               <img src="images/missin-vission2.webp" alt="">
             </div>
