--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <title>Home</title>
 
     <!-- for footer -->
-    <!-- <link
+    <link
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
     rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
     crossorigin="anonymous"
-  /> -->
+  />
 
     <!-- tailwindcss -->
     <link rel="stylesheet" href="src/output.css" />
@@ -44,11 +44,11 @@
   rel="stylesheet"
   href="ajax/libs/fancybox/3.3.5/jquery.fancybox.min.css"
 /> -->
-<!-- <link rel="stylesheet" href="ajax/libs/slick-carousel/1.8.1/slick.css" /> -->
-<!-- <link rel="stylesheet" href="frontassets/front/css/thumbelina.css" /> -->
-<!-- <link rel="stylesheet" href="frontassets/front/css/loader.min.css" /> -->
+<link rel="stylesheet" href="ajax/libs/slick-carousel/1.8.1/slick.css" />
+<link rel="stylesheet" href="frontassets/front/css/thumbelina.css" />
+<link rel="stylesheet" href="frontassets/front/css/loader.min.css" />
 <link rel="stylesheet" href="frontassets/front/css/style.css" />
-<!-- <link rel="stylesheet" href="frontassets/front/css/responsive.css" /> -->
+<link rel="stylesheet" href="frontassets/front/css/responsive.css" />
 
 
 
@@ -94,7 +94,7 @@
                 <a
                   class="nav-link"
                   aria-current="page"
-                  href="https://laserpowerinfra.com/home"
+                  href="index.html"
                   >Home
                 </a>
               </li>
@@ -113,7 +113,7 @@
                   <li>
                     <a
                       class="dropdown-item"
-                      href="https://laserpowerinfra.com/about"
+                      href="about.html"
                       >About us</a
                     >
                   </li>
@@ -378,14 +378,6 @@
         </div>
       </nav>
     </header>
-
-
-
-
-
-
-
-
 
 
     <!-- ScrollTrigger image && hero -->
@@ -1580,7 +1572,7 @@
 
     <!-- <script src="jquery-3.4.1.min.js"></script> -->
 
-    <!-- <script src="npm/bootstrap%405.1.3/dist/js/bootstrap.bundle.min.js"></script> -->
+    <script src="npm/bootstrap%405.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- <script src="ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script> -->
     <!-- <script src="ajax/libs/fancybox/3.3.5/jquery.fancybox.min.js"></script> -->
     <!-- <script src="ajax/libs/slick-carousel/1.8.1/slick.js"></script> -->
@@ -1589,11 +1581,11 @@
     <!-- <script src="frontassets/front/js/jquery.bgscroll.js"></script> -->
     <!-- <script src="aos%402.3.0/dist/aos.js"></script> -->
     <!-- <script src="frontassets/front/js/main.js"></script> -->
-    <!-- <script
+    <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"
-  ></script> -->
+  ></script>
 
 
 
